add cv download

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,9 @@
       "title": "Education Background",
       "text1": "Passed Matriculation Examination - 2019",
       "text2": "Joined Yangon Technological University - 2019",
-      "text3": "Joined University of the People - 2022 ~ Present"
+      "text3": "Joined University of the People - 2022 ~ Present",
+      "text4": "Passed ITPEC FE Exam - 2023",
+      "text5": "JLPT N3 合格"
     },
     "year": "1 Year",
     "vue": "Vue",
