--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -28,7 +28,9 @@
       "title": "学歴",
       "text1": "大学入学資格試験 合格 — 2019年",
       "text2": "Yangon Technological University — 2019年",
-      "text3": "University of the People — 2022年〜在学中"
+      "text3": "University of the People — 2022年〜在学中",
+      "text4": "ITPEC 基本情報技術者試験 合格 - 2023年",
+      "text5": "JLPT N3 合格"
     },
     "year": "1年",
     "vue": "Vue",
