add bouncing contact button

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -3,7 +3,7 @@
     "home": "ホーム",
     "about": "私について",
     "skills": "スキル",
-    "experience": "経験",
+    "project": "プロジェクト",
     "contact": "ご連絡"
   },
   "home": {
