--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
     "home": "Home",
     "about": "About",
     "skills": "Skills",
-    "experience": "Experience",
+    "project": "Projects",
     "contact": "Contact"
   },
   "home": {
